@@ -1,63 +1,30 @@
 package guess.util.yaml;
 
 import guess.domain.source.*;
-import org.junit.Test;
-import org.junit.experimental.runners.Enclosed;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-import org.junit.runners.Parameterized.Parameters;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 import java.util.function.Function;
+import java.util.stream.Stream;
 
-import static junit.framework.TestCase.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 
-@RunWith(Enclosed.class)
+@DisplayName("ConferenceDataLoader class tests")
 public class YamlUtilsTest {
-    public static abstract class LinkSpeakersToTalksExceptionTest {
-        protected final Map<Long, Speaker> speakers;
-        protected final List<Talk> talks;
-
-        public LinkSpeakersToTalksExceptionTest(Map<Long, Speaker> speakers, List<Talk> talks) {
-            this.speakers = speakers;
-            this.talks = talks;
-        }
-    }
-
-    @RunWith(Parameterized.class)
-    public static class LinkSpeakersToTalksIllegalStateExceptionTest extends LinkSpeakersToTalksExceptionTest {
-        @Parameters
-        public static Collection<Object[]> data() {
-            Talk talk0 = new Talk();
-            talk0.setSpeakerIds(Collections.emptyList());
-
-            Talk talk1 = new Talk();
-            talk1.setSpeakerIds(List.of(0L));
-
-            Speaker speaker0 = new Speaker();
-            speaker0.setId(0);
-
-            return Arrays.asList(new Object[][]{
-                    {Collections.emptyMap(), List.of(talk0)},
-                    {Collections.emptyMap(), List.of(talk0, talk1)},
-                    {Map.of(0L, speaker0), List.of(talk1, talk0)},
-            });
-        }
-
-        public LinkSpeakersToTalksIllegalStateExceptionTest(Map<Long, Speaker> speakers, List<Talk> talks) {
-            super(speakers, talks);
-        }
-
-        @Test(expected = IllegalStateException.class)
-        public void linkSpeakersToTalks() {
-            YamlUtils.linkSpeakersToTalks(speakers, talks);
-        }
-    }
-
-    @RunWith(Parameterized.class)
-    public static class LinkSpeakersToTalksNullPointerExceptionTest extends LinkSpeakersToTalksExceptionTest {
-        @Parameters
-        public static Collection<Object[]> data() {
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("linkSpeakersToTalks method tests (with exception)")
+    class LinkSpeakersToTalksExceptionTest {
+        private Stream<Arguments> data() {
             Talk talk0 = new Talk();
             talk0.setSpeakerIds(Collections.emptyList());
 
@@ -70,26 +37,27 @@ public class YamlUtilsTest {
             Speaker speaker0 = new Speaker();
             speaker0.setId(0);
 
-            return Arrays.asList(new Object[][]{
-                    {Collections.emptyMap(), List.of(talk1, talk0)},
-                    {Map.of(0L, speaker0), List.of(talk1, talk2, talk0)}
-            });
+            return Stream.of(
+                    arguments(Collections.emptyMap(), List.of(talk0), IllegalStateException.class),
+                    arguments(Collections.emptyMap(), List.of(talk0, talk1), IllegalStateException.class),
+                    arguments(Map.of(0L, speaker0), List.of(talk1, talk0), IllegalStateException.class),
+                    arguments(Collections.emptyMap(), List.of(talk1, talk0), NullPointerException.class),
+                    arguments(Map.of(0L, speaker0), List.of(talk1, talk2, talk0), NullPointerException.class)
+            );
         }
 
-        public LinkSpeakersToTalksNullPointerExceptionTest(Map<Long, Speaker> speakers, List<Talk> talks) {
-            super(speakers, talks);
-        }
-
-        @Test(expected = NullPointerException.class)
-        public void linkSpeakersToTalks() {
-            YamlUtils.linkSpeakersToTalks(speakers, talks);
+        @ParameterizedTest
+        @MethodSource("data")
+        public void linkSpeakersToTalks(Map<Long, Speaker> speakers, List<Talk> talks, Class<? extends Exception> expected) {
+            assertThrows(expected, () -> YamlUtils.linkSpeakersToTalks(speakers, talks));
         }
     }
 
-    @RunWith(Parameterized.class)
-    public static class LinkEventsToEventTypesTest {
-        @Parameters
-        public static Collection<Object[]> data() {
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("linkEventsToEventTypes method tests (with exception)")
+    class LinkEventsToEventTypesTest {
+        private Stream<Arguments> data() {
             Event event0 = new Event();
             event0.setEventTypeId(0);
 
@@ -99,32 +67,26 @@ public class YamlUtilsTest {
             EventType eventType0 = new EventType();
             eventType0.setId(0);
 
-            return Arrays.asList(new Object[][]{
-                    {Collections.emptyMap(), List.of(event0)},
-                    {Map.of(0L, eventType0), List.of(event1)},
-                    {Map.of(0L, eventType0), List.of(event0, event1)},
-                    {Map.of(0L, eventType0), List.of(event1, event0)}
-            });
+            return Stream.of(
+                    arguments(Collections.emptyMap(), List.of(event0), NullPointerException.class),
+                    arguments(Map.of(0L, eventType0), List.of(event1), NullPointerException.class),
+                    arguments(Map.of(0L, eventType0), List.of(event0, event1), NullPointerException.class),
+                    arguments(Map.of(0L, eventType0), List.of(event1, event0), NullPointerException.class)
+            );
         }
 
-        private final Map<Long, EventType> eventTypes;
-        private final List<Event> events;
-
-        public LinkEventsToEventTypesTest(Map<Long, EventType> eventTypes, List<Event> events) {
-            this.eventTypes = eventTypes;
-            this.events = events;
-        }
-
-        @Test(expected = NullPointerException.class)
-        public void linkSpeakersToTalks() {
-            YamlUtils.linkEventsToEventTypes(eventTypes, events);
+        @ParameterizedTest
+        @MethodSource("data")
+        public void linkSpeakersToTalks(Map<Long, EventType> eventTypes, List<Event> events, Class<? extends Exception> expected) {
+            assertThrows(expected, () -> YamlUtils.linkEventsToEventTypes(eventTypes, events));
         }
     }
 
-    @RunWith(Parameterized.class)
-    public static class LinkEventsToPlacesTest {
-        @Parameters
-        public static Collection<Object[]> data() {
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("linkEventsToPlaces method tests (with exception)")
+    class LinkEventsToPlacesTest {
+        private Stream<Arguments> data() {
             Event event0 = new Event();
             event0.setPlaceId(0);
 
@@ -134,32 +96,26 @@ public class YamlUtilsTest {
             Place place0 = new Place();
             place0.setId(0);
 
-            return Arrays.asList(new Object[][]{
-                    {Collections.emptyMap(), List.of(event0)},
-                    {Map.of(0L, place0), List.of(event1)},
-                    {Map.of(0L, place0), List.of(event0, event1)},
-                    {Map.of(0L, place0), List.of(event1, event0)}
-            });
+            return Stream.of(
+                    arguments(Collections.emptyMap(), List.of(event0), NullPointerException.class),
+                    arguments(Map.of(0L, place0), List.of(event1), NullPointerException.class),
+                    arguments(Map.of(0L, place0), List.of(event0, event1), NullPointerException.class),
+                    arguments(Map.of(0L, place0), List.of(event1, event0), NullPointerException.class)
+            );
         }
 
-        private final Map<Long, Place> places;
-        private final List<Event> events;
-
-        public LinkEventsToPlacesTest(Map<Long, Place> places, List<Event> events) {
-            this.places = places;
-            this.events = events;
-        }
-
-        @Test(expected = NullPointerException.class)
-        public void linkSpeakersToTalks() {
-            YamlUtils.linkEventsToPlaces(places, events);
+        @ParameterizedTest
+        @MethodSource("data")
+        public void linkSpeakersToTalks(Map<Long, Place> places, List<Event> events, Class<? extends Exception> expected) {
+            assertThrows(expected, () -> YamlUtils.linkEventsToPlaces(places, events));
         }
     }
 
-    @RunWith(Parameterized.class)
-    public static class LinkTalksToEventsTest {
-        @Parameters
-        public static Collection<Object[]> data() {
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("linkTalksToEvents method tests (with exception)")
+    class LinkTalksToEventsTest {
+        private Stream<Arguments> data() {
             Event event0 = new Event();
             event0.setPlaceId(0);
             event0.setTalkIds(List.of(0L));
@@ -171,32 +127,26 @@ public class YamlUtilsTest {
             Talk talk0 = new Talk();
             talk0.setId(0L);
 
-            return Arrays.asList(new Object[][]{
-                    {Collections.emptyMap(), List.of(event0)},
-                    {Map.of(0L, talk0), List.of(event1)},
-                    {Map.of(0L, talk0), List.of(event0, event1)},
-                    {Map.of(0L, talk0), List.of(event1, event0)}
-            });
+            return Stream.of(
+                    arguments(Collections.emptyMap(), List.of(event0), NullPointerException.class),
+                    arguments(Map.of(0L, talk0), List.of(event1), NullPointerException.class),
+                    arguments(Map.of(0L, talk0), List.of(event0, event1), NullPointerException.class),
+                    arguments(Map.of(0L, talk0), List.of(event1, event0), NullPointerException.class)
+            );
         }
 
-        private final Map<Long, Talk> talks;
-        private final List<Event> events;
-
-        public LinkTalksToEventsTest(Map<Long, Talk> talks, List<Event> events) {
-            this.talks = talks;
-            this.events = events;
-        }
-
-        @Test(expected = NullPointerException.class)
-        public void linkSpeakersToTalks() {
-            YamlUtils.linkTalksToEvents(talks, events);
+        @ParameterizedTest
+        @MethodSource("data")
+        public void linkSpeakersToTalks(Map<Long, Talk> talks, List<Event> events, Class<? extends Exception> expected) {
+            assertThrows(expected, () -> YamlUtils.linkTalksToEvents(talks, events));
         }
     }
 
-    @RunWith(Parameterized.class)
-    public static class ListToMapTest {
-        @Parameters
-        public static Collection<Object[]> data() {
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("listToMap method tests (with exception)")
+    class ListToMapTest {
+        private Stream<Arguments> data() {
             Speaker speaker0 = new Speaker();
             speaker0.setId(0);
 
@@ -205,31 +155,25 @@ public class YamlUtilsTest {
 
             Function<? super Speaker, ? extends Long> keyExtractor = (Function<Speaker, Long>) Speaker::getId;
 
-            return Arrays.asList(new Object[][]{
-                    {List.of(speaker0, speaker0), keyExtractor},
-                    {List.of(speaker0, speaker1, speaker1), keyExtractor},
-                    {List.of(speaker0, speaker1, speaker1, speaker0), keyExtractor}
-            });
+            return Stream.of(
+                    arguments(List.of(speaker0, speaker0), keyExtractor, IllegalStateException.class),
+                    arguments(List.of(speaker0, speaker1, speaker1), keyExtractor, IllegalStateException.class),
+                    arguments(List.of(speaker0, speaker1, speaker1, speaker0), keyExtractor, IllegalStateException.class)
+            );
         }
 
-        private final List<Speaker> speakers;
-        private final Function<? super Speaker, ? extends Long> keyExtractor;
-
-        public ListToMapTest(List<Speaker> speakers, Function<? super Speaker, ? extends Long> keyExtractor) {
-            this.speakers = speakers;
-            this.keyExtractor = keyExtractor;
-        }
-
-        @Test(expected = IllegalStateException.class)
-        public void listToMap() {
-            YamlUtils.listToMap(speakers, keyExtractor);
+        @ParameterizedTest
+        @MethodSource("data")
+        public void listToMap(List<Speaker> speakers, Function<? super Speaker, ? extends Long> keyExtractor, Class<? extends Exception> expected) {
+            assertThrows(expected, () -> YamlUtils.listToMap(speakers, keyExtractor));
         }
     }
 
-    @RunWith(Parameterized.class)
-    public static class FindSpeakerDuplicatesTest {
-        @Parameters
-        public static Collection<Object[]> data() {
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("findSpeakerDuplicates method tests")
+    class FindSpeakerDuplicatesTest {
+        private Stream<Arguments> data() {
             Speaker speaker0 = new Speaker();
             speaker0.setId(0);
             speaker0.setName(List.of(new LocaleItem("en", "name0")));
@@ -254,25 +198,18 @@ public class YamlUtilsTest {
             speaker4.setName(List.of(new LocaleItem("en", "name3")));
             speaker4.setCompany(List.of(new LocaleItem("en", "company3")));
 
-            return Arrays.asList(new Object[][]{
-                    {Collections.emptyList(), false},
-                    {List.of(speaker0, speaker1), true},
-                    {List.of(speaker0, speaker2), true},
-                    {List.of(speaker0, speaker1, speaker2), true},
-                    {List.of(speaker3, speaker4), true}
-            });
+            return Stream.of(
+                    arguments(Collections.emptyList(), false),
+                    arguments(List.of(speaker0, speaker1), true),
+                    arguments(List.of(speaker0, speaker2), true),
+                    arguments(List.of(speaker0, speaker1, speaker2), true),
+                    arguments(List.of(speaker3, speaker4), true)
+            );
         }
 
-        private final List<Speaker> speakers;
-        private final boolean expected;
-
-        public FindSpeakerDuplicatesTest(List<Speaker> speakers, boolean expected) {
-            this.speakers = speakers;
-            this.expected = expected;
-        }
-
-        @Test
-        public void listToMap() {
+        @ParameterizedTest
+        @MethodSource("data")
+        public void listToMap(List<Speaker> speakers, boolean expected) {
             assertEquals(expected, YamlUtils.findSpeakerDuplicates(speakers));
         }
     }
